(rule
  (targets runtest-internal)
  (deps    ../src/ocamlbuild_config.ml internal.ml internal_test_header.ml ocamlbuild_test.ml)
  (action  (progn (setenv OCAML_COLOR never (run ocaml internal.ml))
                  (with-stdout-to %{targets} (echo 42)))))

(rule
  (targets runtest-findlibonly)
  (deps    ../src/ocamlbuild_config.ml findlibonly.ml findlibonly_test_header.ml internal_test_header.ml ocamlbuild_test.ml)
  (action  (progn (setenv OCAML_COLOR never (run ocaml findlibonly.ml))
                  (with-stdout-to %{targets} (echo 42)))))

(rule
  (targets runtest-external)
  (deps    ../src/ocamlbuild_config.ml external.ml external_test_header.ml findlibonly_test_header.ml internal_test_header.ml ocamlbuild_test.ml)
  (action  (progn (setenv OCAML_COLOR never (run ocaml external.ml))
                  (with-stdout-to %{targets} (echo 42)))))

(rule
  (targets runtest-seq-findlibonly)
  (deps    runtest-internal findlibonly.ml findlibonly_test_header.ml)
  (action  (progn (setenv OCAML_COLOR never (run ocaml findlibonly.ml))
                  (with-stdout-to %{targets} (echo 42)))))

(rule
  (targets runtest-seq-external)
  (deps    runtest-seq-findlibonly external.ml external_test_header.ml)
  (action  (progn (setenv OCAML_COLOR never (run ocaml external.ml))
                  (with-stdout-to %{targets} (echo 42)))))

(alias
  (name runtest)
  (deps runtest-seq-external))
